# mcp-server-job-description-complexity-score

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .replit  ADJUSTED_HUMAN_AI_RATIO.md  AI_MODEL_TRAINING_SUMMARY.md  AI_SPEEDUP_MODEL.md  BOILERPLATE_DEDUCTION_SUMMARY.md  CLEANUP_SUMMARY.md  DYNAMIC_DISCOVERY_SUMMARY.md  Dockerfile  FINAL_RATIO_UPDATE_SUMMARY.md  FORMATTED_OUTPUT_GUIDE.md  HIRING_CLASSIFIER_SUMMARY.md  HIRING_CLASSIFIER_WORKFLOW.md  LATEST_UPDATES.md  ML_IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_SUMMARY.md  NEW_TECH_SOLUTION.md  NO_HARDCODED_KEYWORDS.md  NO_RETRAINING_SUMMARY.md  README.md  REALISTIC_LOC_SUMMARY.md  SCHEMA_CLEANUP_SUMMARY.md  SCHEMA_REFACTOR_SUMMARY.md  SETUP_TIME_ALLOCATION.md  SIMPLIFIED_SCHEMA_SUMMARY.md  SOFTWARE_SCORER.md  SYSTEM_DESIGN_INTEGRATION.md  SYSTEM_DESIGN_KNOWLEDGE_BASE.md  TIME_CALCULATION_MAX.md  TIME_FORMATTING_BEFORE_AFTER.md  TIME_FORMATTING_SUMMARY.md  WHY_54_YEARS_EXPLANATION.md  active_learning_hiring.py  active_learning_loop.py  analyze_github_repos.py  bootstrap_training_data.py  (+64 more)
.github/workflows/: ci-cd.yml
cache/: external_techs.json
cache/difficulty/: ansible.json  bun.json  datadog.json  django.json  grafana.json  htmx.json  hyperscript-2025.json  jenkins.json  new-framework.json  prometheus.json  quantum-framework-xyz-2026.json  quantum-react-2026.json  react.json  servicenow.json  svelte.json  terraform.json  twilio.json
complexity_mcp_project/: asgi.py  settings.py  urls.py  wsgi.py
config/: ai_speedup_model.json  ai_time_breakdown.json  complexity_factors.json  keyword_map.json  realistic_loc_estimates.json  system_design_patterns.json  tech_tools_map.json  technology_difficulty.json
data/: hiring_build_training_data.example.jsonl  merged_training_data.jsonl  recalculated_complexity_scores.jsonl  recalculated_complexity_scores_full.jsonl  software_training_data.example.jsonl  software_training_data.jsonl  system_design_training.jsonl  tech_criticality_training.jsonl  training_from_patterns.jsonl  uncertain_samples_demo.jsonl  unlabeled_prompts.txt
demos/: demo_experience_mentioned.py  demo_final_fields.py
design_docs/: DYNAMIC_DISCOVERY_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  NEW_TECH_SOLUTION.md  NO_RETRAINING_SUMMARY.md  TECH_REGISTRY_GUIDE.md
mcp_server/: complexity_scorer.py  flask_app.py  hiring_classifier.py  logging_utils.py  mcp_inspector.py  ml_difficulty_estimator.py  ml_tech_extractor.py  online_tech_inference.py  resume_parser.py  server.py  simple_tech_extractor.py  software_complexity_scorer.py  software_complexity_scorer.py.backup  tech_registry.py
mcp_server/ml_models/: README.md  __init__.py  alternatives_recommender.py  difficulty_scorer.py  experience_extractor.py  tech_extractor.py
models/: registry.json  score_model.joblib  system_design_classifier.pkl  system_design_vectorizer.pkl  tech_criticality_classifier.pkl  tech_criticality_vectorizer.pkl  tech_loc_overhead_map.json  tfidf_vectorizer.joblib  time_model.joblib
models/alternatives/: alternatives_config.json  tech_embeddings.npy  tech_metadata.json
models/difficulty/: difficulty_config.json
tests/: test_experience_estimate.py  test_experience_extraction.py  test_extractor.py  test_flask_app.py  test_hiring_classifier_integration.py  test_logging_run.py  test_ml_difficulty_estimator.py  test_ml_role_defaults.py  test_resume.py  test_resume_files.py  test_role_defaults.py  test_tech_registry.py  test_unknown_clone_fallback.py
training_data/: sample_data.py
(+9 files in other folders)
