[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "mcp>=1.20.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
]

[project.scripts]
# Console scripts (available after `uv pip install -e .` or within `uv run`)
mcp-server = "mcp_server.server:main"
mcp-inspect-server = "mcp_server.inspect:main"
train-model = "train_model:main"
demo = "demo_time_estimation:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["mcp_server*", "complexity_mcp_project*"]
exclude = ["models*", "__pycache__*"]
